# sowing

./: .cproject  .gitignore  .project  CMakeLists.txt
include/: patchlevel.h  patchlevel.h.in  sowing.h  sowingconfig.h.in.cmake
src/sys/: arch.c  daytime.c  file.c
